crates/ndc-postgres/tests/snapshots/query_tests__basic__select_by_pk.snap
---
source: crates/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": {
          "value": "Garage Inc. (Disc 1)"
        }
      }
    ]
  }
]
