crates/ndc-postgres/tests/snapshots/query_tests__basic__select_int_and_string.snap
---
source: crates/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 35
        },
        "title": {
          "value": "Garage Inc. (Disc 1)"
        }
      }
    ]
  }
]
